--- a/about.html
+++ b/about.html
@@ -105,13 +105,13 @@
 
            <ul class="nav justify-content-center">
                <li class="nav-item">
-               <a class="nav-link" href="#">LinkedIn</a>
+               <a class="nav-link" href="https://bit.ly/2QyIIuM">LinkedIn</a>
              </li>
              <li class="nav-item">
-               <a class="nav-link" href="#">affanatif1999@gmail.com</a>
+               <a class="nav-link" href="mailto:affanatif1999@gail.com">affanatif1999@gmail.com</a>
              </li>
              <li class="nav-item">
-                <a class="nav-link" href="#">Facebook</a>
+                <a class="nav-link" href="https://bit.ly/2QyJXtW">Facebook</a>
              </li>
              
             </ul>
