--- a/about.html
+++ b/about.html
@@ -88,6 +88,8 @@
 				            	<i class="fab fa-php"></i></li>
 				            <li class="list-inline-item p-2">
 				            	<i class="fab fa-wordpress"></i></li>
+					    <li class="list-inline-item p-2">
+				            	<i class="fab fa-laravel"></i></li>
 			            </ul>
 			            		<hr>
 			            <h2 class="text-center">Interests.</h2>
